@@ -32,6 +32,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assumptions.assumeFalse;
 import static org.mockito.ArgumentCaptor.forClass;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.atLeastOnce;
@@ -60,10 +61,10 @@ import java.util.concurrent.Semaphore;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import jakarta.jms.Destination;
+import jakarta.jms.JMSException;
 import jakarta.jms.TextMessage;
 
 import org.apache.logging.log4j.Logger;
@@ -76,11 +77,15 @@ import org.junit.jupiter.api.TestInfo;
 import org.junit.jupiter.api.Timeout;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.CsvSource;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.ArgumentCaptor;
 import org.mockito.stubbing.Answer;
 import org.springframework.beans.factory.DisposableBean;
-import org.springframework.core.task.SimpleAsyncTaskExecutor;
+import org.springframework.beans.factory.config.ConfigurableListableBeanFactory;
+import org.springframework.context.event.SimpleApplicationEventMulticaster;
+import org.springframework.context.support.AbstractApplicationContext;
+import org.springframework.core.task.TaskExecutor;
 import org.springframework.transaction.TransactionDefinition;
 import org.springframework.transaction.TransactionStatus;
 import org.springframework.transaction.jta.JtaTransactionManager;
@@ -88,6 +93,8 @@ import org.springframework.transaction.support.DefaultTransactionDefinition;
 
 import lombok.Lombok;
 
+import org.frankframework.configuration.ConfigurationWarnings;
+import org.frankframework.configuration.SpringEventErrorHandler;
 import org.frankframework.core.Adapter;
 import org.frankframework.core.IListener;
 import org.frankframework.core.IListenerConnector;
@@ -109,6 +116,16 @@ import org.frankframework.jms.MessagingSource;
 import org.frankframework.jms.PushingJmsListener;
 import org.frankframework.jta.narayana.NarayanaJtaTransactionManager;
 import org.frankframework.management.Action;
+import org.frankframework.monitoring.AdapterFilter;
+import org.frankframework.monitoring.EventType;
+import org.frankframework.monitoring.IMonitorDestination;
+import org.frankframework.monitoring.ITrigger;
+import org.frankframework.monitoring.Monitor;
+import org.frankframework.monitoring.MonitorManager;
+import org.frankframework.monitoring.Severity;
+import org.frankframework.monitoring.SourceFiltering;
+import org.frankframework.monitoring.Trigger;
+import org.frankframework.monitoring.events.FireMonitorEvent;
 import org.frankframework.pipes.EchoPipe;
 import org.frankframework.stream.Message;
 import org.frankframework.stream.MessageContext;
@@ -116,14 +133,14 @@ import org.frankframework.testutil.TestAppender;
 import org.frankframework.testutil.TestAssertions;
 import org.frankframework.testutil.TestConfiguration;
 import org.frankframework.testutil.TransactionManagerType;
+import org.frankframework.testutil.mock.ConnectionFactoryFactoryMock;
 import org.frankframework.testutil.mock.DataSourceFactoryMock;
 import org.frankframework.util.LogUtil;
-import org.frankframework.util.MessageKeeperMessage;
 import org.frankframework.util.RunState;
 
 @Tag("slow")
 public class ReceiverTest {
-	public static final DefaultTransactionDefinition TRANSACTION_DEFINITION = new DefaultTransactionDefinition(TransactionDefinition.PROPAGATION_REQUIRES_NEW);
+	public static final DefaultTransactionDefinition TX_REQUIRES_NEW = new DefaultTransactionDefinition(TransactionDefinition.PROPAGATION_REQUIRES_NEW);
 	protected static final Logger LOG = LogUtil.getLogger(ReceiverTest.class);
 	private TestConfiguration configuration;
 	private String adapterName;
@@ -140,7 +157,7 @@ public class ReceiverTest {
 	}
 
 	@AfterEach
-	@Timeout(value = 10, unit = TimeUnit.SECONDS) //Unfortunately this doesn't work on other threads
+	@Timeout(value = 30) // Unfortunately this doesn't work on other threads
 	void tearDown() {
 		if (configuration != null) {
 			configuration.close();
@@ -173,12 +190,13 @@ public class ReceiverTest {
 
 	public <M> Receiver<M> setupReceiver(IListener<M> listener) {
 		@SuppressWarnings("unchecked")
-		Receiver<M> receiver = configuration.createBean(Receiver.class);
-		configuration.autowireByName(listener);
+		Receiver<M> receiver = spy(configuration.createBean(Receiver.class));
 		receiver.setListener(listener);
 		receiver.setName("receiver");
 		receiver.setStartTimeout(2);
 		receiver.setStopTimeout(2);
+		// To speed up test, we don't actually sleep
+		doNothing().when(receiver).suspendReceiverThread(anyInt());
 		DummySender sender = configuration.createBean(DummySender.class);
 		receiver.setSender(sender);
 		return receiver;
@@ -189,7 +207,6 @@ public class ReceiverTest {
 	}
 
 	public <M> Adapter setupAdapter(Receiver<M> receiver, ExitState exitState) throws Exception {
-
 		Adapter adapter = spy(configuration.createBean(Adapter.class));
 		adapter.setName(adapterName);
 
@@ -217,27 +234,32 @@ public class ReceiverTest {
 		return adapter;
 	}
 
-	public Receiver<String> setupReceiverWithMessageStoreListener(MessageStoreListener<String> listener, ITransactionalStorage<Serializable> errorStorage) {
-		Receiver<String> receiver = configuration.createBean(Receiver.class);
+	public Receiver<Serializable> setupReceiverWithMessageStoreListener(MessageStoreListener listener, ITransactionalStorage<Serializable> errorStorage) {
+		@SuppressWarnings("unchecked")
+		Receiver<Serializable> receiver = spy(configuration.createBean(Receiver.class));
 		receiver.setListener(listener);
 		receiver.setName("receiver");
 		DummySender sender = configuration.createBean(DummySender.class);
 		receiver.setSender(sender);
 		receiver.setErrorStorage(errorStorage);
 		receiver.setNumThreads(2);
+		// To speed up test, we don't actually sleep
+		doNothing().when(receiver).suspendReceiverThread(anyInt());
 		return receiver;
 	}
 
-	public MessageStoreListener<String> setupMessageStoreListener() throws Exception {
+	public MessageStoreListener setupMessageStoreListener() throws Exception {
 		Connection connection = mock(Connection.class);
-		MessageStoreListener<String> listener = spy(new MessageStoreListener<>());
+
+		MessageStoreListener listener = spy(new MessageStoreListener());
 		listener.setDataSourceFactory(new DataSourceFactoryMock());
 		listener.setConnectionsArePooled(true);
-		doReturn(connection).when(listener).getConnection();
+		listener.setName("messageStoreListener");
 		listener.setSessionKeys("ANY-KEY");
 		listener.extractSessionKeyList();
-		doReturn(false).when(listener).hasRawMessageAvailable();
 
+		doReturn(connection).when(listener).getConnection();
+		doReturn(false).when(listener).hasRawMessageAvailable();
 		doNothing().when(listener).configure();
 		doNothing().when(listener).start();
 
@@ -245,7 +267,8 @@ public class ReceiverTest {
 	}
 
 	public ITransactionalStorage<Serializable> setupErrorStorage() {
-		JdbcTransactionalStorage txStorage = mock(JdbcTransactionalStorage.class);
+		//noinspection unchecked
+		JdbcTransactionalStorage<Serializable> txStorage = mock(JdbcTransactionalStorage.class);
 		txStorage.setDataSourceFactory(new DataSourceFactoryMock());
 		return txStorage;
 	}
@@ -257,8 +280,7 @@ public class ReceiverTest {
 	}
 
 	private static TestConfiguration buildNarayanaTransactionManagerConfiguration() {
-		TestConfiguration configuration =  buildConfiguration(TransactionManagerType.NARAYANA);
-		return configuration;
+		return buildConfiguration(TransactionManagerType.NARAYANA);
 	}
 
 	private static TestConfiguration buildConfiguration(TransactionManagerType txManagerType) {
@@ -299,11 +321,6 @@ public class ReceiverTest {
 		receiver.setTxManager(txManager);
 		receiver.setTransactionAttribute(TransactionAttribute.REQUIRED);
 
-		// assume there was no connectivity, the message was not able to be stored in the database, retryInterval keeps increasing.
-		final Field retryIntervalField = Receiver.class.getDeclaredField("retryInterval");
-		retryIntervalField.setAccessible(true);
-		retryIntervalField.set(receiver, 2);
-
 		Adapter adapter = setupAdapter(receiver);
 
 		assertEquals(RunState.STOPPED, adapter.getRunState());
@@ -318,7 +335,7 @@ public class ReceiverTest {
 
 		TextMessage jmsMessage = mock(TextMessage.class);
 		doReturn("dummy-message-id").when(jmsMessage).getJMSMessageID();
-		doReturn(receiver.getMaxDeliveries() + 1).when(jmsMessage).getIntProperty("JMSXDeliveryCount");
+		doReturn(receiver.getMaxRetries() + 2).when(jmsMessage).getIntProperty("JMSXDeliveryCount");
 		doReturn(Collections.emptyEnumeration()).when(jmsMessage).getPropertyNames();
 		doReturn("message").when(jmsMessage).getText();
 		RawMessageWrapper<jakarta.jms.Message> messageWrapper = new RawMessageWrapper<>(jmsMessage, "dummy-message-id", "dummy-cid");
@@ -339,7 +356,8 @@ public class ReceiverTest {
 				try {
 					int nrTries = 0;
 					while (nrTries++ < NR_TIMES_MESSAGE_OFFERED) {
-						final TransactionStatus tx = txManager.getTransaction(TRANSACTION_DEFINITION);
+						final TransactionStatus tx = txManager.getTransaction(TX_REQUIRES_NEW);
+						//noinspection unchecked
 						reset(errorStorage, listener);
 						when(errorStorage.storeMessage(any(), any(), any(), any(), any(), any()))
 							.thenAnswer(invocation -> {
@@ -360,18 +378,17 @@ public class ReceiverTest {
 							if (tx.isRollbackOnly()) {
 								rolledBackTXCounter.incrementAndGet();
 							} else {
-								LOG.warn("I had expected TX to be marked for rollback-only by now?");
+								LOG.debug("Main TX not marked for rollback-only.");
 							}
 							if (!tx.isCompleted()) {
 								// We do rollback inside the Receiver already but if the TX is aborted
-								/// it never seems to be marked "Completed" by Narayana.
+								// it never seems to be marked "Completed" by Narayana.
 								txNotCompletedAfterReceiverEnds.incrementAndGet();
 								txManager.rollback(tx);
 							}
-							retryIntervalField.set(receiver, 2); // To avoid test taking too long.
 						}
 					}
-				} catch (SenderException | IllegalAccessException| IllegalArgumentException e) {
+				} catch (SenderException | IllegalArgumentException e) {
 					throw Lombok.sneakyThrow(e);
 				} finally {
 					semaphore.release();
@@ -387,6 +404,7 @@ public class ReceiverTest {
 
 		// Assert
 		assertAll(
+			() -> assertEquals(3, receiver.getMaxRetries()),
 			() -> assertEquals(0, rolledBackTXCounter.get(), "rolledBackTXCounter: Mismatch in nr of messages marked for rollback by TX manager"),
 			() -> assertEquals(NR_TIMES_MESSAGE_OFFERED, processedNoException.get(), "processedNoException: Mismatch in nr of messages processed without exception from receiver"),
 			() -> assertEquals(0, txRollbackOnlyInErrorStorage.get(), "txRollbackOnlyInErrorStorage: Mismatch in nr of transactions already marked rollback-only while moving to error storage."),
@@ -417,7 +435,6 @@ public class ReceiverTest {
 		ITransactionalStorage<Serializable> errorStorage = mock(ITransactionalStorage.class);
 		@SuppressWarnings("unchecked")
 		ITransactionalStorage<Serializable> messageLog = mock(ITransactionalStorage.class);
-
 		createMessagingSource(listener);
 
 		@SuppressWarnings("unchecked")
@@ -428,21 +445,15 @@ public class ReceiverTest {
 		receiver.setMessageLog(messageLog);
 
 		final JtaTransactionManager txManager = configuration.getBean(JtaTransactionManager.class);
-		txManager.setDefaultTimeout(1);
-//		txManager.setDefaultTimeout(1000000); // Long timeout for debug, do not commit this timeout!! Should be 1
+		txManager.setDefaultTimeout(10);
+//		txManager.setDefaultTimeout(1000000); // Long timeout for debug, do not commit this timeout!! Should be 10
 
 		receiver.setTxManager(txManager);
 		receiver.setTransactionAttribute(TransactionAttribute.REQUIRED);
 
 		final int TEST_MAX_RETRIES = 2;
-		final int NR_TIMES_MESSAGE_OFFERED = TEST_MAX_RETRIES + 1;
+		final int MAX_NR_TIMES_MESSAGE_OFFERED = TEST_MAX_RETRIES + 3;
 		receiver.setMaxRetries(TEST_MAX_RETRIES);
-		receiver.setMaxDeliveries(TEST_MAX_RETRIES);
-
-		// assume there was no connectivity, the message was not able to be stored in the database, retryInterval keeps increasing.
-		final Field retryIntervalField = Receiver.class.getDeclaredField("retryInterval");
-		retryIntervalField.setAccessible(true);
-		retryIntervalField.set(receiver, 2);
 
 		Adapter adapter = setupAdapter(receiver, ExitState.ERROR);
 
@@ -465,9 +476,9 @@ public class ReceiverTest {
 
 		TextMessage jmsMessage = mock(TextMessage.class);
 		doReturn("dummy-message-id").when(jmsMessage).getJMSMessageID();
-		doAnswer(invocation -> rolledBackTXCounter.get() + 1).when(jmsMessage).getIntProperty("JMSXDeliveryCount");
 		doReturn(Collections.emptyEnumeration()).when(jmsMessage).getPropertyNames();
 		doReturn("message").when(jmsMessage).getText();
+
 		RawMessageWrapper<jakarta.jms.Message> messageWrapper = new RawMessageWrapper<>(jmsMessage, "dummy-message-id", "dummy-cid");
 
 		ArgumentCaptor<String> messageIdCaptor = forClass(String.class);
@@ -480,8 +491,13 @@ public class ReceiverTest {
 			public void run() {
 				try {
 					int nrTries = 0;
-					while (nrTries++ < NR_TIMES_MESSAGE_OFFERED) {
-						final TransactionStatus tx = txManager.getTransaction(TRANSACTION_DEFINITION);
+					while (nrTries++ < MAX_NR_TIMES_MESSAGE_OFFERED && movedToErrorStorage.get() == 0) {
+						final int deliveryCount = nrTries;
+						doAnswer(invocation -> deliveryCount).when(jmsMessage).getIntProperty("JMSXDeliveryCount");
+
+						LOG.info("Nr tries: {}, Nr rolled back transactions: {}, delivery count: {}", nrTries, rolledBackTXCounter.get(), receiver.getDeliveryCount(messageWrapper));
+						final TransactionStatus tx = txManager.getTransaction(TX_REQUIRES_NEW);
+						//noinspection unchecked
 						reset(errorStorage, listener);
 						when(errorStorage.storeMessage(messageIdCaptor.capture(), correlationIdCaptor.capture(), any(), any(), any(), messageCaptor.capture()))
 								.thenAnswer(invocation -> {
@@ -502,18 +518,17 @@ public class ReceiverTest {
 							if (tx.isRollbackOnly()) {
 								rolledBackTXCounter.incrementAndGet();
 							} else {
-								LOG.warn("I had expected TX to be marked for rollback-only by now?");
+								LOG.debug("Main TX not marked for rollback-only");
 							}
 							if (!tx.isCompleted()) {
 								// We do rollback inside the Receiver already but if the TX is aborted
-								/// it never seems to be marked "Completed" by Narayana.
+								// it never seems to be marked "Completed" by Narayana.
 								txNotCompletedAfterReceiverEnds.incrementAndGet();
 								txManager.rollback(tx);
 							}
-							retryIntervalField.set(receiver, 2); // To avoid test taking too long.
 						}
 					}
-				} catch (SenderException | IllegalAccessException| IllegalArgumentException e) {
+				} catch (SenderException | IllegalArgumentException | JMSException e) {
 					throw Lombok.sneakyThrow(e);
 				} finally {
 					semaphore.release();
@@ -528,16 +543,17 @@ public class ReceiverTest {
 		((DisposableBean) txManager).destroy();
 
 		// Assert
+		int expectedNrTimesMessageActuallyOffered = receiver.getMaxRetries() + 2;
 		assertAll(
 			() -> assertEquals("dummy-message-id", messageIdCaptor.getValue(), "Message ID does not match"),
 			() -> assertEquals("dummy-cid", correlationIdCaptor.getValue(), "Correlation ID does not match"),
 			() -> assertEquals("message", ((MessageWrapper<?>)messageCaptor.getValue()).getMessage().asString(), "Message contents do not match"),
 			() -> assertEquals(0, rolledBackTXCounter.get(), "rolledBackTXCounter: Mismatch in nr of messages marked for rollback by TX manager"),
-			() -> assertEquals(NR_TIMES_MESSAGE_OFFERED, processedNoException.get(), "processedNoException: Mismatch in nr of messages processed without exception from receiver"),
+			() -> assertEquals(expectedNrTimesMessageActuallyOffered, processedNoException.get(), "processedNoException: Mismatch in nr of messages processed without exception from receiver"),
 			() -> assertEquals(0, txRollbackOnlyInErrorStorage.get(), "txRollbackOnlyInErrorStorage: Mismatch in nr of transactions already marked rollback-only while moving to error storage."),
 			() -> assertEquals(0, exceptionsFromReceiver.get(), "exceptionsFromReceiver: Mismatch in nr of exceptions from Receiver method"),
 			() -> assertEquals(1, movedToErrorStorage.get(), "movedToErrorStorage: Mismatch in nr of messages moved to error storage"),
-			() -> assertEquals(NR_TIMES_MESSAGE_OFFERED, txNotCompletedAfterReceiverEnds.get(), "txNotCompletedAfterReceiverEnds: Mismatch in nr of transactions not completed after receiver finishes")
+			() -> assertEquals(expectedNrTimesMessageActuallyOffered, txNotCompletedAfterReceiverEnds.get(), "txNotCompletedAfterReceiverEnds: Mismatch in nr of transactions not completed after receiver finishes")
 		);
 	}
 
@@ -561,7 +577,7 @@ public class ReceiverTest {
 		IListenerConnector<jakarta.jms.Message> jmsConnectorMock = mock(IListenerConnector.class);
 		listener.setJmsConnector(jmsConnectorMock);
 		Receiver<jakarta.jms.Message> receiver = setupReceiver(listener);
-		receiver.setMaxDeliveries(1);
+		receiver.setMaxRetries(1);
 
 		Adapter adapter = setupAdapter(receiver, ExitState.ERROR);
 
@@ -577,7 +593,7 @@ public class ReceiverTest {
 
 		TextMessage jmsMessage = mock(TextMessage.class);
 		doReturn("dummy-message-id").when(jmsMessage).getJMSMessageID();
-		doAnswer(invocation -> receiver.getMaxDeliveries() + 1).when(jmsMessage).getIntProperty("JMSXDeliveryCount");
+		doAnswer(invocation -> receiver.getMaxRetries() + 2).when(jmsMessage).getIntProperty("JMSXDeliveryCount");
 		doReturn(Collections.emptyEnumeration()).when(jmsMessage).getPropertyNames();
 		doReturn("message").when(jmsMessage).getText();
 		RawMessageWrapper<jakarta.jms.Message> messageWrapper = new RawMessageWrapper<>(jmsMessage, "dummy-message-id", "dummy-cid");
@@ -605,6 +621,69 @@ public class ReceiverTest {
 	}
 
 	@Test
+	void testStopReceiverWithFaultyMonitor() throws Exception {
+		// Arrange
+		configuration = buildConfiguration(null);
+		IListener<Serializable> listener = setupMessageStoreListener();
+		Receiver<Serializable> receiver = setupReceiver(listener);
+
+		IMonitorDestination destination = mock(IMonitorDestination.class);
+		when(destination.getName()).thenReturn("dummy-destination-name");
+
+		Monitor monitor = new Monitor();
+		monitor.setApplicationContext(configuration);
+		monitor.setName("test-monitor");
+		monitor.setType(EventType.TECHNICAL);
+
+		MonitorManager monitorManager = new MonitorManager();
+		monitorManager.setApplicationContext(configuration);
+		monitorManager.addMonitor(monitor);
+		monitorManager.addDestination(destination);
+		monitor.setDestinations(destination.getName());
+
+		Trigger badTrigger = spy(new Trigger());
+		doThrow(IllegalStateException.class).when(badTrigger).onApplicationEvent(any(FireMonitorEvent.class));
+		badTrigger.setSeverity(Severity.WARNING);
+		badTrigger.setTriggerType(ITrigger.TriggerType.ALARM);
+		badTrigger.setEventCode(Receiver.RCV_SHUTDOWN_MONITOR_EVENT);
+
+		monitor.addTrigger(badTrigger);
+
+		ConfigurableListableBeanFactory beanFactory = configuration.getBeanFactory();
+		SimpleApplicationEventMulticaster eventMulticaster = beanFactory.getBean(AbstractApplicationContext.APPLICATION_EVENT_MULTICASTER_BEAN_NAME, SimpleApplicationEventMulticaster.class);
+		eventMulticaster.setErrorHandler(new SpringEventErrorHandler());
+
+		Adapter adapter = setupAdapter(receiver, ExitState.ERROR);
+
+		badTrigger.setSourceFiltering(SourceFiltering.ADAPTER);
+		AdapterFilter af = new AdapterFilter();
+		af.setAdapter(adapter.getName());
+		badTrigger.addAdapterFilter(af);
+
+		// start adapter
+		monitorManager.configure();
+		configuration.configure();
+		configuration.start();
+
+		waitWhileInState(adapter, RunState.STOPPED);
+		waitWhileInState(adapter, RunState.STARTING);
+		waitWhileInState(receiver, RunState.STOPPED);
+		waitWhileInState(receiver, RunState.STARTING);
+
+		LOG.info("Adapter RunState: {}", adapter.getRunState());
+		LOG.info("Receiver RunState: {}", receiver.getRunState());
+
+		// Act
+		try (TestAppender appender = TestAppender.newBuilder().build()) {
+			adapter.stop();
+
+			waitForState(adapter, RunState.STOPPED);
+
+			assertThat(appender.getLogLines(), hasItem(containsString("Error handling event")));
+		}
+	}
+
+	@Test
 	void testGetDeliveryCountWithJmsListener() throws Exception {
 		// Arrange
 		configuration = buildConfiguration(null);
@@ -622,22 +701,67 @@ public class ReceiverTest {
 		@SuppressWarnings("unchecked")
 		IListenerConnector<jakarta.jms.Message> jmsConnectorMock = mock(IListenerConnector.class);
 		listener.setJmsConnector(jmsConnectorMock);
+		ConnectionFactoryFactoryMock connectionFactoryFactoryMock = new ConnectionFactoryFactoryMock();
+		listener.setConnectionFactoryFactory(connectionFactoryFactoryMock);
+		listener.setQueueConnectionFactoryName(ConnectionFactoryFactoryMock.MOCK_CONNECTION_FACTORY_NAME);
+		listener.setDestinationName("jms/dest_fake");
+		listener.setLookupDestination(false);
+
 		Receiver<jakarta.jms.Message> receiver = setupReceiver(listener);
 		receiver.setErrorStorage(errorStorage);
 		receiver.setMessageLog(messageLog);
+		receiver.configure();
+
+		// Should have 3 retries with JMS listeners
+		assertEquals(3, receiver.getMaxRetries());
 
 		TextMessage jmsMessage = mock(TextMessage.class);
 		doReturn("dummy-message-id").when(jmsMessage).getJMSMessageID();
-		doAnswer(invocation -> 5).when(jmsMessage).getIntProperty("JMSXDeliveryCount");
 		doReturn(Collections.emptyEnumeration()).when(jmsMessage).getPropertyNames();
 		doReturn("message").when(jmsMessage).getText();
 		RawMessageWrapper<jakarta.jms.Message> rawMessage = new RawMessageWrapper<>(jmsMessage, "dummy-message-id", "dummy-cid");
+		MessageWrapper<jakarta.jms.Message> messageWrapper = new MessageWrapper<>(rawMessage, Message.nullMessage());
 
-		// Act
-		int result = receiver.getDeliveryCount(rawMessage);
+		doAnswer(invocation -> 5).when(jmsMessage).getIntProperty("JMSXDeliveryCount");
 
-		// Assert
-		assertEquals(4, result);
+		// Act / Assert
+		assertAll(
+				()-> assertEquals(5, receiver.getDeliveryCount(rawMessage)),
+				()-> assertTrue(receiver.isDeliveryRetryLimitExceededBeforeMessageProcessing(rawMessage, new PipeLineSession(), false)),
+				()-> assertTrue(receiver.isDeliveryRetryLimitExceededAfterMessageProcessed(messageWrapper))
+		);
+
+		doAnswer(invocation -> receiver.getMaxRetries()).when(jmsMessage).getIntProperty("JMSXDeliveryCount");
+		receiver.updateMessageReceiveCount(messageWrapper);
+
+		assertAll(
+				()-> assertFalse(receiver.isDeliveryRetryLimitExceededBeforeMessageProcessing(rawMessage, new PipeLineSession(), false)),
+				()-> assertFalse(receiver.isDeliveryRetryLimitExceededAfterMessageProcessed(messageWrapper))
+		);
+
+		doAnswer(invocation -> receiver.getMaxRetries()-1).when(jmsMessage).getIntProperty("JMSXDeliveryCount");
+		receiver.updateMessageReceiveCount(messageWrapper);
+
+		assertAll(
+				()-> assertFalse(receiver.isDeliveryRetryLimitExceededBeforeMessageProcessing(rawMessage, new PipeLineSession(), false)),
+				()-> assertFalse(receiver.isDeliveryRetryLimitExceededAfterMessageProcessed(messageWrapper))
+		);
+
+		doAnswer(invocation -> receiver.getMaxRetries()+1).when(jmsMessage).getIntProperty("JMSXDeliveryCount");
+		receiver.updateMessageReceiveCount(messageWrapper);
+
+		assertAll(
+				()-> assertFalse(receiver.isDeliveryRetryLimitExceededBeforeMessageProcessing(rawMessage, new PipeLineSession(), false)),
+				()-> assertTrue(receiver.isDeliveryRetryLimitExceededAfterMessageProcessed(messageWrapper))
+		);
+
+		doAnswer(invocation -> receiver.getMaxRetries()+2).when(jmsMessage).getIntProperty("JMSXDeliveryCount");
+		receiver.updateMessageReceiveCount(messageWrapper);
+
+		assertAll(
+				()-> assertTrue(receiver.isDeliveryRetryLimitExceededAfterMessageProcessed(messageWrapper)),
+				()-> assertTrue(receiver.isDeliveryRetryLimitExceededBeforeMessageProcessing(rawMessage, new PipeLineSession(), false))
+		);
 	}
 
 	@Test
@@ -660,6 +784,7 @@ public class ReceiverTest {
 		txManager.setDefaultTimeout(1);
 		receiver.setTxManager(txManager);
 		receiver.setTransactionAttribute(TransactionAttribute.NOTSUPPORTED);
+		receiver.configure();
 
 		Adapter adapter = setupAdapter(receiver, ExitState.ERROR);
 		configuration.configure();
@@ -668,39 +793,38 @@ public class ReceiverTest {
 
 		final String messageId = "A Path";
 		RawMessageWrapper<String> rawMessageWrapper = new RawMessageWrapper<>("message", messageId, null);
+		MessageWrapper<String> messageWrapper = new MessageWrapper<>(rawMessageWrapper, Message.asMessage(rawMessageWrapper.rawMessage));
 
 		// Act
-		int result1 = receiver.getDeliveryCount(rawMessageWrapper);
-
-		// Assert
-		assertEquals(1, result1);
-
-		// Arrange (for 2nd invocation)
 		try (PipeLineSession session = new PipeLineSession()) {
 			session.put(PipeLineSession.MESSAGE_ID_KEY, messageId);
 			receiver.processRawMessage(listener, rawMessageWrapper, session, false);
 		} catch (Exception e) {
-			// We expected an exception here...
+			// Exception might occur here...
 		}
 
-		// Act
-		int result2 = receiver.getDeliveryCount(rawMessageWrapper);
+		int result = receiver.getDeliveryCount(rawMessageWrapper);
 
 		// Assert
-		assertEquals(2, result2);
+		assertAll(
+				()-> assertEquals(1, result),
+				()-> assertEquals(1, receiver.getMaxRetries()),
+				()-> assertFalse(receiver.isDeliveryRetryLimitExceededAfterMessageProcessed(messageWrapper)),
+				()-> assertFalse(receiver.isDeliveryRetryLimitExceededBeforeMessageProcessing(rawMessageWrapper, new PipeLineSession(), false))
+		);
 	}
 
 	@Test
 	public void testProcessRequest() throws Exception {
 		// Arrange
 		String rawTestMessage = "TEST";
-		RawMessageWrapper<String> rawTestMessageWrapper = new RawMessageWrapper<>(rawTestMessage, "mid", "cid");
+		RawMessageWrapper<Serializable> rawTestMessageWrapper = new RawMessageWrapper<>(rawTestMessage, "mid", "cid");
 		Message testMessage = new Message(new StringReader(rawTestMessage));
 
 		configuration = buildNarayanaTransactionManagerConfiguration();
 		ITransactionalStorage<Serializable> errorStorage = setupErrorStorage();
-		MessageStoreListener<String> listener = setupMessageStoreListener();
-		Receiver<String> receiver = setupReceiverWithMessageStoreListener(listener, errorStorage);
+		MessageStoreListener listener = setupMessageStoreListener();
+		Receiver<Serializable> receiver = setupReceiverWithMessageStoreListener(listener, errorStorage);
 		Adapter adapter = setupAdapter(receiver);
 
 		PipeLine pipeLine = adapter.getPipeLine();
@@ -728,8 +852,6 @@ public class ReceiverTest {
 			assertTrue(result.requiresStream(), "Result message should be a stream");
 			assertTrue(result.isRequestOfType(Reader.class), "Result message should be of type Reader");
 			assertEquals("TEST", result.asString());
-		} finally {
-			configuration.getIbisManager().handleAction(Action.STOPADAPTER, configuration.getName(), adapter.getName(), receiver.getName(), null, true);
 		}
 	}
 
@@ -739,18 +861,14 @@ public class ReceiverTest {
 		configuration = buildNarayanaTransactionManagerConfiguration();
 		final String testMessage = "\"<msg attr=\"\"an attribute\"\"/>\",\"ANY-KEY-VALUE\"";
 		ITransactionalStorage<Serializable> errorStorage = setupErrorStorage();
-		MessageStoreListener<String> listener = setupMessageStoreListener();
-		Receiver<String> receiver = setupReceiverWithMessageStoreListener(listener, errorStorage);
+		MessageStoreListener listener = setupMessageStoreListener();
+		Receiver<Serializable> receiver = setupReceiverWithMessageStoreListener(listener, errorStorage);
 		Adapter adapter = setupAdapter(receiver);
 
 		when(errorStorage.getMessage("1")).thenAnswer((Answer<RawMessageWrapper<?>>) invocation -> new RawMessageWrapper<>(testMessage, invocation.getArgument(0), null));
 
 		// start adapter
 		configuration.configure();
-//		configuration.start();
-//
-//		waitForState(adapter, RunState.STARTED);
-//		waitForState(receiver, RunState.STARTED);
 
 		ArgumentCaptor<Message> messageCaptor = forClass(Message.class);
 		ArgumentCaptor<PipeLineSession> sessionCaptor = forClass(PipeLineSession.class);
@@ -778,10 +896,10 @@ public class ReceiverTest {
 		// Arrange
 		configuration = buildNarayanaTransactionManagerConfiguration();
 		final String testMessage = "\"<msg attr=\"\"an attribute\"\"/>\",\"ANY-KEY-VALUE\"";
-		MessageStoreListener<String> listener = setupMessageStoreListener();
-		Receiver<String> receiver = setupReceiverWithMessageStoreListener(listener, null);
+		MessageStoreListener listener = setupMessageStoreListener();
+		Receiver<Serializable> receiver = setupReceiverWithMessageStoreListener(listener, null);
 		Adapter adapter = setupAdapter(receiver);
-		IMessageBrowser<String> messageBrowser = mock();
+		IMessageBrowser<Serializable> messageBrowser = mock();
 
 		when(messageBrowser.browseMessage("1")).thenAnswer((Answer<RawMessageWrapper<?>>) invocation -> new RawMessageWrapper<>(testMessage, invocation.getArgument(0), null));
 		when(listener.getMessageBrowser(ProcessState.ERROR)).thenReturn(messageBrowser);
@@ -789,10 +907,6 @@ public class ReceiverTest {
 
 		// start adapter
 		configuration.configure();
-//		configuration.start();
-//
-//		waitForState(adapter, RunState.STARTED);
-//		waitForState(receiver, RunState.STARTED);
 
 		ArgumentCaptor<Message> messageCaptor = forClass(Message.class);
 		ArgumentCaptor<PipeLineSession> sessionCaptor = forClass(PipeLineSession.class);
@@ -823,8 +937,8 @@ public class ReceiverTest {
 		configuration = buildNarayanaTransactionManagerConfiguration();
 		final String testMessage = "\"<msg attr=\"\"an attribute\"\"/>\",\"ANY-KEY-VALUE\"";
 		ITransactionalStorage<Serializable> errorStorage = setupErrorStorage();
-		MessageStoreListener<String> listener = setupMessageStoreListener();
-		Receiver<String> receiver = setupReceiverWithMessageStoreListener(listener, errorStorage);
+		MessageStoreListener listener = setupMessageStoreListener();
+		Receiver<Serializable> receiver = setupReceiverWithMessageStoreListener(listener, errorStorage);
 		Adapter adapter = setupAdapter(receiver);
 
 		doThrow(new RuntimeException()).when(adapter).processMessageWithExceptions(any(), any(), any());
@@ -852,8 +966,8 @@ public class ReceiverTest {
 		// Arrange
 		configuration = buildNarayanaTransactionManagerConfiguration();
 		final String testMessage = "\"<msg attr=\"\"an attribute\"\"/>\",\"ANY-KEY-VALUE\"";
-		MessageStoreListener<String> listener = setupMessageStoreListener();
-		Receiver<String> receiver = setupReceiverWithMessageStoreListener(listener, null);
+		MessageStoreListener listener = setupMessageStoreListener();
+		Receiver<Serializable> receiver = setupReceiverWithMessageStoreListener(listener, null);
 		Adapter adapter = setupAdapter(receiver);
 		IMessageBrowser<String> messageBrowser = mock();
 
@@ -905,12 +1019,12 @@ public class ReceiverTest {
 		waitWhileInState(adapter, RunState.STOPPED);
 		waitWhileInState(adapter, RunState.STARTING);
 
-		LOG.info("Adapter RunState "+adapter.getRunState());
+		LOG.info("Adapter RunState: {}", adapter.getRunState());
 		assertEquals(RunState.STARTED, adapter.getRunState());
 
 		waitWhileInState(receiver, RunState.STOPPED); // Ensure the next waitWhileInState doesn't skip when STATE is still STOPPED
 		waitWhileInState(receiver, RunState.STARTING); // Don't continue until the receiver has been started.
-		LOG.info("Receiver RunState "+receiver.getRunState());
+		LOG.info("Receiver RunState: {}", receiver.getRunState());
 
 		assertFalse(listener.isClosed()); // Not closed, thus open
 		assertFalse(receiver.getSender().isSynchronous()); // Not closed, thus open
@@ -944,13 +1058,13 @@ public class ReceiverTest {
 		waitWhileInState(adapter, RunState.STOPPED);
 		waitWhileInState(adapter, RunState.STARTING);
 
-		LOG.info("Adapter RunState " + adapter.getRunState());
+		LOG.info("Adapter RunState: {}", adapter.getRunState());
 		assertEquals(RunState.STARTED, adapter.getRunState());
 
 		waitWhileInState(receiver, RunState.STOPPED); // Ensure the next waitWhileInState doesn't skip when STATE is still STOPPED
 		waitWhileInState(receiver, RunState.STARTING); // Don't continue until the receiver has been started.
 
-		LOG.info("Receiver RunState " + receiver.getRunState());
+		LOG.info("Receiver RunState: {}", receiver.getRunState());
 		assertEquals(RunState.EXCEPTION_STARTING, receiver.getRunState(), "Receiver should be in state [EXCEPTION_STARTING]");
 		await().atMost(500, TimeUnit.MILLISECONDS)
 						.until(()-> receiver.getSender().isSynchronous());
@@ -961,7 +1075,7 @@ public class ReceiverTest {
 				.atMost(10, TimeUnit.SECONDS)
 				.pollInterval(100, TimeUnit.MILLISECONDS)
 				.until(() -> {
-					System.out.println(receiver.getRunState());
+					LOG.info("<*> Receiver runstate: {}", receiver.getRunState());
 					return receiver.isInRunState(RunState.STOPPED);
 				});
 		assertEquals(RunState.STOPPED, receiver.getRunState());
@@ -969,9 +1083,13 @@ public class ReceiverTest {
 		assertTrue(listener.isClosed());
 	}
 
+	/*
+	 * This test is flaky when running with other tests because you don't know how many
+	 * threads exist in the threadpool and can run concurrently.
+	 */
 	@Test
 	public void testStopAdapterWhileReceiverIsStillStarting() throws Exception {
-		assumeFalse(TestAssertions.isTestRunningWithSurefire() || TestAssertions.isTestRunningOnCI(), "For unknown reasons this test is unreliable on Github and CI so only run locally for now until we have time to investigate");
+		assumeFalse(TestAssertions.isTestRunningWithSurefire() || TestAssertions.isTestRunningOnCI(), "flaky test, should not fail ci");
 
 		// Arrange
 		configuration = buildConfiguration(null);
@@ -999,7 +1117,7 @@ public class ReceiverTest {
 					.atMost(5, TimeUnit.SECONDS)
 					.pollInterval(1, TimeUnit.SECONDS)
 					.until(() -> {
-						LOG.info("<*> Receiver runstate: " + receiver.getRunState());
+						LOG.info("<*> Receiver runstate: {}", receiver.getRunState());
 						return adapter.getRunState() == RunState.STOPPED;
 					});
 
@@ -1010,6 +1128,8 @@ public class ReceiverTest {
 
 			// If logs do not contain these lines, then we did not actually test what we meant to test. Perhaps receiver start delay need to be increased.
 			assertThat(appender.getLogLines(), hasItem(containsString("receiver currently in state [STARTING], ignoring stop() command")));
+
+			// This log line is not always present, it seems that the receiver sometimes starts/stops quicker then we expect...
 			assertThat(appender.getLogLines(), hasItem(containsString("which was still starting when stop() command was received")));
 		}
 	}
@@ -1042,15 +1162,15 @@ public class ReceiverTest {
 		waitWhileInState(adapter, RunState.STOPPED);
 		waitWhileInState(adapter, RunState.STARTING);
 
-		LOG.info("Adapter RunState "+adapter.getRunState());
-		LOG.info("Receiver RunState "+receiver.getRunState());
+		LOG.info("Adapter RunState: {}", adapter.getRunState());
+		LOG.info("Receiver RunState: {}", receiver.getRunState());
 		waitForState(receiver, RunState.STARTED); // Don't continue until the receiver has been started.
 
 		configuration.getIbisManager().handleAction(Action.STOPRECEIVER, configuration.getName(), adapter.getName(), receiver.getName(), null, true);
 
 		waitWhileInState(receiver, RunState.STARTED);
 		waitWhileInState(receiver, RunState.STOPPING);
-		LOG.info("Receiver RunState "+receiver.getRunState());
+		LOG.info("Receiver RunState: {}", receiver.getRunState());
 
 		assertEquals(RunState.EXCEPTION_STOPPING, receiver.getRunState());
 		assertEquals(RunState.STARTED, adapter.getRunState());
@@ -1082,15 +1202,15 @@ public class ReceiverTest {
 		waitWhileInState(adapter, RunState.STOPPED);
 		waitWhileInState(adapter, RunState.STARTING);
 
-		LOG.info("Adapter RunState "+adapter.getRunState());
-		LOG.info("Receiver RunState "+receiver.getRunState());
+		LOG.info("Adapter RunState: {}", adapter.getRunState());
+		LOG.info("Receiver RunState: {}", receiver.getRunState());
 		waitForState(receiver, RunState.STARTED); // Don't continue until the receiver has been started.
 
 		configuration.getIbisManager().handleAction(Action.STOPRECEIVER, configuration.getName(), adapter.getName(), receiver.getName(), null, true);
 
 		waitWhileInState(receiver, RunState.STARTED);
 		waitWhileInState(receiver, RunState.STOPPING);
-		LOG.info("Receiver RunState "+receiver.getRunState());
+		LOG.info("Receiver RunState: {}", receiver.getRunState());
 
 		assertEquals(RunState.EXCEPTION_STOPPING, receiver.getRunState());
 	}
@@ -1118,8 +1238,8 @@ public class ReceiverTest {
 		waitWhileInState(adapter, RunState.STOPPED);
 		waitWhileInState(adapter, RunState.STARTING);
 
-		LOG.info("Adapter RunState " + adapter.getRunState());
-		LOG.info("Receiver RunState " + receiver.getRunState());
+		LOG.info("Adapter RunState: {}", adapter.getRunState());
+		LOG.info("Receiver RunState: {}", receiver.getRunState());
 		assertEquals(RunState.STARTED, adapter.getRunState());
 
 		waitForState(receiver, RunState.STARTED); // Don't continue until the receiver has been started.
@@ -1139,7 +1259,7 @@ public class ReceiverTest {
 				.stream()
 				.filter(msg -> msg != null && "ERROR".equals(msg.getMessageLevel()))
 				.map(Object::toString)
-				.collect(Collectors.toList());
+				.toList();
 
 		assertThat(errors, hasItem(containsString("Failed to restart receiver")));
 
@@ -1148,7 +1268,7 @@ public class ReceiverTest {
 
 		waitWhileInState(receiver, RunState.STARTED);
 		waitWhileInState(receiver, RunState.STOPPING);
-		LOG.info("Receiver RunState "+receiver.getRunState());
+		LOG.info("Receiver RunState: {}", receiver.getRunState());
 
 		assertEquals(RunState.STOPPED, receiver.getRunState());
 	}
@@ -1174,8 +1294,8 @@ public class ReceiverTest {
 		waitWhileInState(adapter, RunState.STOPPED);
 		waitWhileInState(adapter, RunState.STARTING);
 
-		LOG.info("Adapter RunState "+adapter.getRunState());
-		LOG.info("Receiver RunState "+receiver.getRunState());
+		LOG.info("Adapter RunState: {}", adapter.getRunState());
+		LOG.info("Receiver RunState: {}", receiver.getRunState());
 		assertEquals(RunState.STARTED, adapter.getRunState());
 
 		waitForState(receiver, RunState.STARTED); // Don't continue until the receiver has been started.
@@ -1194,15 +1314,15 @@ public class ReceiverTest {
 
 		waitWhileInState(receiver, RunState.STARTED);
 		waitWhileInState(receiver, RunState.STOPPING);
-		LOG.info("Receiver RunState "+receiver.getRunState());
+		LOG.info("Receiver RunState: {}", receiver.getRunState());
 
 		assertEquals(RunState.EXCEPTION_STOPPING, receiver.getRunState());
 
 		List<String> warnings = new ArrayList<>(adapter.getMessageKeeper())
 				.stream()
-				.filter(msg -> msg instanceof MessageKeeperMessage && "WARN".equals(msg.getMessageLevel()))
+				.filter(msg -> msg != null && "WARN".equals(msg.getMessageLevel()))
 				.map(Object::toString)
-				.collect(Collectors.toList());
+				.toList();
 		assertThat(warnings, everyItem(containsString("JMS poll timeout")));
 	}
 
@@ -1225,12 +1345,12 @@ public class ReceiverTest {
 		waitWhileInState(receiver, RunState.STOPPED);
 		waitWhileInState(receiver, RunState.STARTING);
 
-		LOG.info("Adapter RunState " + adapter.getRunState());
-		LOG.info("Receiver RunState " + receiver.getRunState());
+		LOG.info("Adapter RunState: {}", adapter.getRunState());
+		LOG.info("Receiver RunState: {}", receiver.getRunState());
 
 		// stop receiver then start
 		Semaphore semaphore = new Semaphore(0);
-		SimpleAsyncTaskExecutor taskExecutor = new SimpleAsyncTaskExecutor();
+		TaskExecutor taskExecutor = configuration.getApplicationContext().getBean("taskExecutor", TaskExecutor.class);
 		taskExecutor.execute(()-> {
 			try {
 				LOG.debug("Stopping receiver [{}] from executor-thread.", receiver.getName());
@@ -1267,8 +1387,8 @@ public class ReceiverTest {
 		// Arrange
 		configuration = buildNarayanaTransactionManagerConfiguration();
 		ITransactionalStorage<Serializable> errorStorage = setupErrorStorage();
-		MessageStoreListener<String> listener = setupMessageStoreListener();
-		Receiver<String> receiver = setupReceiverWithMessageStoreListener(listener, errorStorage);
+		MessageStoreListener listener = setupMessageStoreListener();
+		Receiver<Serializable> receiver = setupReceiverWithMessageStoreListener(listener, errorStorage);
 		Adapter adapter = setupAdapter(receiver);
 
 		// The actual size of a message as string can be shorter than the reported size. This could be due to incorrect
@@ -1299,5 +1419,37 @@ public class ReceiverTest {
 
 		// Assert
 		assertEquals(result, message);
+	}
+
+	@ParameterizedTest
+	@CsvSource({
+			"500, 50, true",
+			"50, 50, false",
+			"40, 40, false"
+	})
+	public void testMaxBackoffDelayAdjustment(Integer maxBackoffDelay, int expectedBackoffDelay, boolean expectConfigWarning) {
+		// Arrange
+		configuration = buildConfiguration(null);
+		Adapter adapter = configuration.createBean(Adapter.class);
+		adapter.setName("adapter");
+		ConfigurationWarnings configWarnings = configuration.getConfigurationWarnings();
+
+		Receiver<String> receiver = new Receiver<>();
+
+		receiver.setAdapter(adapter);
+		receiver.setMaxBackoffDelay(maxBackoffDelay);
+		receiver.setTransactionTimeout(100);
+
+		// Act
+		int actualBackoffDelay = receiver.calculateAdjustedMaxBackoffDelay(maxBackoffDelay);
+
+		// Assert
+		assertEquals(expectedBackoffDelay, actualBackoffDelay);
+		if (expectConfigWarning) {
+			assertEquals(1, configWarnings.size(), "There should have been exactly 1 config warning");
+			assertThat(configWarnings.get(0), containsString("Maximum backoff delay reduced"));
+		} else {
+			assertTrue(configWarnings.isEmpty(), "There should not have been any config warnings");
+		}
 	}
 }
